--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1 id="1"><u>About Me</u></h1>
-    <img src="" alt="Profile Picture" width="250" height="300">
+    <img src="../HTML-Final-Assignment/2b93c4cc-fc04-43fc-ac99-0b4b0a3eb93d.jfif" alt="Profile Picture" width="250" height="300">
     <hr>
     <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem tempora, tempore ad itaque eum saepe praesentium
         perferendis nulla vero delectus beatae repellat harum obcaecati atque sint. Iusto facere laboriosam culpa.
