--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
             </tr>
         </tbody>
     </table>
-    <a href="/index.html">GO Back</a> <br>
+    <a href="../HTML-Final-Assignment/index.html">GO Back</a> <br>
     <a href="#1">GO UP</a>
 </body>
 
