--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <address>House No.F-55 , PMTF Coloney , Mehran Highway , Karachi</address><br><br>
     Sajjad<sup>TM</sup><br><br>
     All rights Reserved <br><br><br>
-    <a href="/index.html">Go Back</a>
+    <a href="../HTML-Final-Assignment/index.html">Go Back</a>
 
     </p> 
 </body>
